replaced footer class with footer

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             </p>
         </div>
     </div>
-    <!-- TODO: Revise footer to match the mockup -->
-    <div class="footer">
+    <!-- TODO: replace footer class -->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </foter>
 </body>
 
 </html>
