--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- DONE: Give a descriptive title name  -->
+    <!-- changed title name to horiseon  -->
     <title>Horiseon</title>
 </head>
 
 <body>
     <header>
-        <!-- TODO: revise syntax of h1 -->
+        <!-- changed div to nav -->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                  <!-- TODO: Link SEO Header link so it points to the SEO image-->
@@ -25,7 +25,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <div class="hero"></div>
     <div class="content">
