replacing non semantic language

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <!-- changed div to nav -->
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<span>seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -30,7 +30,7 @@
     <img class="hero"></img>
     <section class="content">
         <!-- TODO: Give the SEO image an id to link to, add image alt attributes, delete extra spaces-->
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -52,22 +52,22 @@
             </p>
         </section>
     </section>
-    <aside class="benefits">
-        <section class="benefit-lead">
+    <aside>
+        <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
